@@ -78,7 +78,7 @@ class User < ActiveRecord::Base
   
   def all_viewable_stickies
     @all_viewable_stickies ||= begin
-      Sticky.current.with_project(self.all_viewable_projects.collect{|p| p.id}, self.id).order('created_at DESC')
+      Sticky.current.with_project(self.all_viewable_projects.collect{|p| p.id}, self.id) # .order('created_at DESC')
     end
   end
   
