@@ -55,6 +55,7 @@
 
 <div style="float:left">
   <%= form_tag search_stickies_path, :method => :get, :id => "stickies_search", :style => 'margin-bottom:0px' do %>
+    <%= hidden_field_tag :order, params[:order] %>
     <%= hidden_field_tag :direction, 0 %>
     <% if false %>  Search <%= text_field_tag 'search', params[:search] %> <% end %>
     <%= hidden_field_tag 'project_id', @project.id %>
